Sculpt API can no longer be used to draw strokes via python #52195

Closed
opened 2017-07-26 18:59:07 +02:00 by Tom Musgrove · 7 comments
Member

System Information
Windows 10 and Ubuntu Linux

Blender Version
Broken: 2.78 and current git
Worked: 2.76b and 2.77a

Short description of error
An change in sculpt stroke initiation to fix a different bug made the sculpt API no longer work.

Exact steps for others to reproduce the error
Place the script sculpt_stroke_on_grease_pencil.py in your addons folder, then run the script with the attached blend - stroke on curve.blend . In previous versions there is a stroke that follows the path of the curve around the object. In current git and 2.78 it no longer works.

sculpt_stroke_on_grease_pencil.py
stroke on curve.blend

**System Information** Windows 10 and Ubuntu Linux **Blender Version** Broken: 2.78 and current git Worked: 2.76b and 2.77a **Short description of error** An change in sculpt stroke initiation to fix a different bug made the sculpt API no longer work. **Exact steps for others to reproduce the error** Place the script sculpt_stroke_on_grease_pencil.py in your addons folder, then run the script with the attached blend - stroke on curve.blend . In previous versions there is a stroke that follows the path of the curve around the object. In current git and 2.78 it no longer works. [sculpt_stroke_on_grease_pencil.py](https://archive.blender.org/developer/F679522/sculpt_stroke_on_grease_pencil.py) [stroke on curve.blend](https://archive.blender.org/developer/F679523/stroke_on_curve.blend)
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @TomMusgrove

Added subscriber: @TomMusgrove
Campbell Barton was assigned by Tom Musgrove 2017-07-26 19:14:19 +02:00
Author
Member

Campbell, I believe it is one of these commits that caused the issue (I think the more recent of the two, but can't recall for certain.)

https://developer.blender.org/rBe8c24ee0d9262fe648f4bd8f13e1a2f1f88ae050
https://developer.blender.org/rB6ac0d357d68d35dc24be9c77fc48abfe20fb3657

Campbell, I believe it is one of these commits that caused the issue (I think the more recent of the two, but can't recall for certain.) https://developer.blender.org/rBe8c24ee0d9262fe648f4bd8f13e1a2f1f88ae050 https://developer.blender.org/rB6ac0d357d68d35dc24be9c77fc48abfe20fb3657

Added subscriber: @Sergey

Added subscriber: @Sergey

Can get the script to work in 2.76b, but not in 2.77a.

In any case, @ideasman42, mind having a look?

Can get the script to work in 2.76b, but not in 2.77a. In any case, @ideasman42, mind having a look?

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This issue was referenced by blender/blender@f3782c0a9e

This issue was referenced by blender/blender@f3782c0a9e44cc56680b0682d0eb78d2974bb593
Sign in to join this conversation.
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender-addons#52195
No description provided.